# approxsvm

./: LICENSE  LICENSE~  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  grep
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
include/: Approximation.h  CLI.h  MatrixMath.h  Util.h
src/: Approximation.cpp  CLI.cpp  MatrixMath.cpp  Util.cpp
src/tests/: matrixmath.cpp  rbfapprox.cpp
src/tools/: approx-analyse.cpp  approx-predict.cpp  approx-svm.cpp  approx-xval.cpp
